@@ -209,6 +209,8 @@ ECL 11.1.2
  - On POSIX platforms ECL traps SIGCHLD and uses it to update the status of
    external processes.
 
+ - DIRECTORY accepts the keyword argument :FOLLOW-SYMLINKS.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
